Fix slow scrolling on iOS Safari

--- a/src/Photogrid.css
+++ b/src/Photogrid.css
@@ -1,3 +1,6 @@
+.PhotoGrid {
+  -webkit-overflow-scrolling: touch;
+}
 
 .PhotoGrid .PhotoGridRow {
   display: inline-block;
